# Bushido

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: app.c.0623D80A5316153C.idx  gameObject.c.FEA7485DA8F6DAF5.idx  vector2.c.3A98E42C2918F01C.idx  vector2.h.6F55CCCD3202BF99.idx
src/: app.c
src/GameCamera/: CMakeLists.txt  camera.c  camera.h
src/GameEngine/: CMakeLists.txt  gameEngine.c  gameEngine.h
src/GameEngine/Collider/: CMakeLists.txt  collider.c  collider.h
src/GameEngine/Entity/: CMakeLists.txt  entity.c  entity.h
src/GameEngine/GameCamera/: CMakeLists.txt
src/GameEngine/GameObject/: CMakeLists.txt  gameObject.c  gameObject.h
src/GameEngine/GameState/: CMakeLists.txt  gameState.c  gameState.h
src/GameEngine/Hitbox/: CMakeLists.txt  hitbox.c  hitbox.h
src/GameEngine/Scene/: CMakeLists.txt  componentUpdates.c  componentUpdates.h  scene.c  scene.h
src/GameEngine/SpriteAnimation/: CMakeLists.txt  sprite.c  spriteRenderer.c  spriteRenderer.h
src/GameEngine/Types/: CMakeLists.txt  orientation.h  vector2.c  vector2.h
src/GameObject/: CMakeLists.txt  gameObject.c  gameObject.h
src/Objects/: CMakeLists.txt
src/Objects/ParallaxBackground/: CMakeLists.txt  parallaxBackground.c  parallaxBackground.h
src/Objects/Rayleigh/: CMakeLists.txt  rayleigh.c  rayleigh.h
src/Objects/Square/: CMakeLists.txt  square.c  square.h
src/Objects/TestMap/: CMakeLists.txt  testMap.c  testMap.h
src/Objects/TrackingCamera/: CMakeLists.txt  trackingCamera.c  trackingCamera.h
src/Scene/: CMakeLists.txt  scene.c  scene.h
src/Scenes/: CMakeLists.txt
src/Scenes/Test/: CMakeLists.txt  testScene.c  testScene.h
src/SpriteAnimation/: CMakeLists.txt  sprite.c  sprite.h  spriteAnimation.c  spriteAnimation.h  spriteRenderer.c  spriteRenderer.h
src/Types/: CMakeLists.txt  orientation.h  types.h  vector2.c  vector2.h
